# fluxmeter

./: .env.prod.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SHOW_HN.md  build.gradle  changLog.md  demo.tape  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.saas.yml  docker-compose.yml  progress.md  record-demo.sh  settings.gradle
api/: Dockerfile  Dockerfile.webhook  auth.py  billing_dims.py  billing_export.py  budget_gate.py  budget_ops.py  gateway_app.py  lite_aggregate.py  lite_aggregate_lua.py  main.py  pricing_loader.py  requirements.txt  rollup_worker.py  tenant_keys.py  usage_buckets.py  webhook_deliver.py  webhook_worker.py
baseline/: benchmark.sh  init.sql  query.sql
config/: pricing.json
contrib/: CONTRIBUTING.md  README.md
demos/: gateway_demo.py  path_activation_demo.py
docs/: DESIGN.md  api-reference.md  control-plane-api.md  customer-integration-lite.md  customer-stories-lite.md  disaster-recovery.md  gateway.md  industry-billing-research-2026.md  integrations.md  intelligence-api.md  landing-intelligence-copy.md  load-testing.md  pricing-hybrid-paths.md  production-deploy.md  pypi-release.md  strategic-positioning-2026.md
flink/: Dockerfile
jobs/: Dockerfile  reconcile_balances.py
monitoring/: prometheus.yml
scripts/: PricingCheck.java  correctness-bench.sh  dlq_replay.py  load-test.sh  pull-images-mirror.sh  record-demo-gif.sh  replay-dlq.sh  run-e2e-all.sh  set-github-topics.sh  validate-spec.sh  verify-e2e.sh  verify-prod-overlay.sh
sdk/: README.md
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/fluxmeter/: __init__.py  client.py  event.py  streaming.py  wal.py  wrap.py
sdk/python/tests/: test_client.py  test_event.py  test_wal.py  test_wrap.py
spec/: README.md
src/: README.md
tests/: TEST_PLAN.md  conftest.py  helpers.py  pytest.ini  requirements.txt  test_api_key_budget.py  test_auth_unit.py  test_billing_dims.py  test_billing_export.py  test_billing_export_partners.py  test_control_plane.py  test_control_plane_models.py  test_e2e_v2.py  test_gateway.py  test_hierarchy_cap.py  test_hierarchy_reserve.py  test_integration.py  test_intelligence_alert_worker.py  test_intelligence_alerts.py  test_intelligence_api.py  test_intelligence_forecast.py  test_intelligence_model_period.py  test_intelligence_native_reader.py  test_intelligence_openmeter.py  test_intelligence_pricing_optimizer.py  test_intelligence_profitability.py  test_intelligence_report.py  (+16 more)
(+100 files in other folders)
