[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxmeter"
version = "0.2.0"
description = "Python SDK for FluxMeter — streaming metering for AI token billing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "FluxMeter", email = "hello@fluxmeter.dev" }]
keywords = ["ai", "llm", "metering", "billing", "tokens", "openai", "anthropic", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.urls]
Homepage = "https://github.com/10kshuaizhang/fluxmeter"
Repository = "https://github.com/10kshuaizhang/fluxmeter"

[tool.hatch.build.targets.wheel]
packages = ["fluxmeter"]

[tool.ruff]
target-version = "py39"
line-length = 100
