[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxmeter"
version = "1.5.0"
description = "Real-time AI token metering and pre-request budget enforcement. Self-hostable, sub-10ms checks, Apache 2.0."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "FluxMeter", email = "hello@fluxmeter.dev" }]
keywords = ["llm", "ai", "token-metering", "billing", "budget", "agents", "openai", "self-hosted", "kafka", "flink"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.urls]
Homepage = "https://fluxmeter.dev"
Documentation = "https://github.com/10kshuaizhang/fluxmeter/blob/main/docs/api-reference.md"
Repository = "https://github.com/10kshuaizhang/fluxmeter"

[tool.hatch.build.targets.wheel]
packages = ["fluxmeter"]

[tool.ruff]
target-version = "py39"
line-length = 100
